Proposed Update for 14.0, draft 2

--- a/tr44/tr44.html
+++ b/tr44/tr44.html
@@ -22,8 +22,8 @@ td.lightgray           { background-color: #E4E4E4 }
   <table class="header">
     <tr>
           <td class="icon" style="width:38px; height:35px">
-          <a href="http://www.unicode.org/">
-          <img border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" align="middle" 
+          <a href="https://www.unicode.org/">
+          <img border="0" src="https://www.unicode.org/webscripts/logo60s2.gif" align="middle" 
           alt="[Unicode]" width="34" height="33"></a>
           </td>
 
@@ -38,12 +38,12 @@ td.lightgray           { background-color: #E4E4E4 }
   </table>
 
 <div class="body">
-	<h2 class="uaxtitle">Unicode® Standard Annex #44</h2>
+	<h2 class="uaxtitle"><span class="changedspan">Proposed Update</span> Unicode® Standard Annex #44</h2>
   <h1>Unicode Character Database</h1>
   <table class="simple" width="90%">
     <tr>
       <td valign="top" width="20%">Version</td>
-      <td valign="top">Unicode 13.0.0</td>
+      <td valign="top">Unicode <span class="changedspan">14</span>.0.0 <span class="changedspan">(Draft 2)</span></td>
     </tr>
     <tr>
       <td valign="top">Editors</td>
@@ -52,18 +52,18 @@ td.lightgray           { background-color: #E4E4E4 }
     </tr>
     <tr>
       <td valign="top">Date</td>
-      <td valign="top">2020-03-04</td>
+      <td valign="top"><span class="changedspan">2021-01-15</span></td>
     </tr>
     <tr>
       <td valign="top">This Version</td>
-      <td valign="top">
-      		<a href="http://www.unicode.org/reports/tr44/tr44-26.html">http://www.unicode.org/reports/tr44/tr44-26.html</a>
+      <td valign="top" class="changed">
+      		<a href="http://www.unicode.org/reports/tr44/tr44-27.html">http://www.unicode.org/reports/tr44/tr44-27.html</a>
       </td>
     </tr>
     <tr>
       <td valign="top">Previous Version</td>
-      <td valign="top">
-      		<a href="http://www.unicode.org/reports/tr44/tr44-24.html">http://www.unicode.org/reports/tr44/tr44-24.html</a>
+      <td valign="top" class="changed">
+      		<a href="http://www.unicode.org/reports/tr44/tr44-26.html">http://www.unicode.org/reports/tr44/tr44-26.html</a>
       </td>
     </tr>
     <tr>
@@ -76,7 +76,7 @@ td.lightgray           { background-color: #E4E4E4 }
     </tr>
     <tr>
       <td valign="top">Revision</td>
-      <td valign="top"><a href="#Modifications">26</a></td>
+      <td valign="top"><a href="#Modifications"><span class="changedspan">27</span></a></td>
     </tr>
   </table>
  
@@ -88,19 +88,19 @@ td.lightgray           { background-color: #E4E4E4 }
   </blockquote>
   
   <h4 class="status">Status</h4>
-	   <!-- NOT YET APPROVED
+	   <!-- NOT YET APPROVED -->
 	  <p><i><span class="changed">This is a<b><font color="#ff3333"> draft </font></b>document which 
       may be updated, replaced, or superseded by other documents at any time. 
       Publication does not imply endorsement by the Unicode Consortium. This is 
       not a stable document; it is inappropriate to cite this document as other 
       than a work in progress.</span></i></p>
-       END NOT YET APPROVED -->
-	  <!-- APPROVED -->
+       <!-- END NOT YET APPROVED -->
+	  <!-- APPROVED 
     <p><i>This document has been reviewed by Unicode members and other interested 
 	parties, and has been approved for publication by the Unicode Consortium. 
 	This is a stable document and may be used as reference material or cited as 
 	a normative reference by other specifications.</i></p>
-    <!-- END APPROVED -->
+     END APPROVED -->
   <blockquote>
     <p><i><b>A Unicode Standard Annex (UAX)</b> forms an integral part of the 
 	Unicode Standard, but is published online as a separate document. The 
@@ -184,7 +184,7 @@ td.lightgray           { background-color: #E4E4E4 }
     the data in the other files in the Unicode Character Database, and relies on the notation and 
     definitions supplied in <a href="http://www.unicode.org/standard/standard.html">The Unicode 
     Standard</a>. All chapter references are to Version 
-    13.0.0 of the standard unless otherwise indicated.</i></p>
+    <span class="changedspan">14</span>.0.0 of the standard unless otherwise indicated.</i></p>
   </blockquote>
   <h2>1 <a name="Introduction" href="#Introduction">Introduction</a></h2>
   
@@ -215,9 +215,9 @@ td.lightgray           { background-color: #E4E4E4 }
   <a href="http://www.unicode.org/Public/UCD/latest/">http://www.unicode.org/Public/UCD/latest/</a>
   </blockquote>
   <p>The specific files for the UCD associated with this version of 
-  the Unicode Standard (13.0.0) are located at:</p>
+  the Unicode Standard (<span class="changedspan">14</span>.0.0) are located at:</p>
   <blockquote>
-  <a href="http://www.unicode.org/Public/13.0.0/">http://www.unicode.org/Public/13.0.0/</a>
+  <a href="http://www.unicode.org/Public/14.0.0/">http://www.unicode.org/Public/<span class="changedspan">14</span>.0.0/</a>
   </blockquote>
   <p>Stable, archived versions of the UCD associated with all earlier 
   versions of the Unicode Standard can be accessed from: </p>
@@ -704,9 +704,9 @@ See <i>Section 3.4, <a href="#StandardizedVariants">StandardizedVariants.html</a
   it will be archived permanently in that directory, unchanged, at a stable URL.</p>
   
   <p>The specific files for the UCD associated with this version of 
-  the Unicode Standard (13.0.0) are located at:</p>
+  the Unicode Standard (<span class="changedspan">14</span>.0.0) are located at:</p>
   <blockquote>
-  <a href="http://www.unicode.org/Public/13.0.0/">http://www.unicode.org/Public/13.0.0/</a>
+  <a href="http://www.unicode.org/Public/14.0.0/">http://www.unicode.org/Public/<span class="changedspan">14</span>.0.0/</a>
   </blockquote>
 
   <p>The latest released version of the UCD is always accessible via the
@@ -760,7 +760,7 @@ See <i>Section 3.4, <a href="#StandardizedVariants">StandardizedVariants.html</a
     See <a href="#Segmentation_Test_Files">Segmentation Test Files and Documentation</a>
     for more information about the test data.</p>
 
-  <p>The data files associated with emoji properties are maintained
+  <p><span class="removedspan">The</span> <span class="changedspan">Certain</span> data files associated with emoji properties are maintained
     in the <i><b>emoji</b></i> subdirectory of the <i>ucd</i> subdirectory. Those data
     files define the simple character properties associated with emoji characters,
     as well as the emoji variation sequences. Other data files associated with
@@ -4902,13 +4902,14 @@ ccc; 232; AR   ; Above_Right
   of the standard.</p>
 
     <p>All characters other than 
-    those of General_Category M* are guaranteed to have Canonical_Combining_Class=0.
-    Currently it is also true that all characters
+    those of General_Category <span class="removedspan">M*</span>
+    <span class="changedspan">Mn or Mc</span> are guaranteed to have Canonical_Combining_Class=0.
+    <span class="removedspan">Currently it is also true that all characters
     other than those of General_Category Mn have Canonical_Combining_Class=0.
     However, the more constrained statement is not a guaranteed invariant;
     it is possible that some new character of
     General_Category Me or Mc could be given a non-zero value for
-    Canonical_Combining_Class in the future.</p>
+    Canonical_Combining_Class in the future.</span></p>
 
     <p>In Unicode 4.0 and thereafter, the General_Category value 
     <i>Decimal_Number</i> (Nd), and 
@@ -5683,6 +5684,290 @@ documented listing of the rules.</p>
 
 <hr>
 
+<div class="changed">
+<h3><a name="Unicode_14.0.0" href="https://www.unicode.org/versions/components-14.0.0.html">Unicode 14.0.0</a></h3>
+
+<p><b>Changes in specific files:</b></p>
+
+<p>Appropriate existing data files were updated to add the NNN new characters encoded in Unicode 14.0.
+  Major changes that are most likely to affect implementations are documented
+  in <a href="https://www.unicode.org/versions/Unicode14.0.0/#Migration">Section M of the Unicode 14.0.0 page</a>.
+  Detailed data file updates resulting from encoding the new characters and from various character
+  property changes are summarized below, in the same grouping manner used in 
+  <a href="https://www.unicode.org/versions/components-14.0.0.html">Components of Unicode 14.0.0</a>.</p>
+
+<p>Note that minor editorial updates and changes to the derived and extracted data files are not documented here.</p>
+
+<h4>Core Data</h4>
+
+  <ul>
+  <li>ArabicShaping.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Blocks.txt
+    <ul>
+    <li>NN new blocks were added, all allocated in the Supplementary Multilingual Plane,
+      including one blocks for the newly encoded script in Version 14.0&#x2014;Toto.</li>
+    </ul>
+  </li>
+  <li>EastAsianWidth.txt
+    <ul>
+    <li>The following newly encoded characters were assigned the East_Asian_Width property value Wide:
+      TBD</li>
+    <li>The NN newly encoded pictographic symbols that have the Emoji_Presentation property
+      as of Version 14.0 of Unicode Technical Standard #51, "Unicode Emoji", were also
+      assigned the East_Asian_Width property value Wide
+      [<a href="../tr41/tr41-26.html#UTS51">UTS51</a>].</li>
+    <li>All of the other new characters, including new symbols, were assigned the
+      East_Asian_Width property value Neutral.</li>
+    </ul>
+  </li>
+  <li>IndicPositionalCategory.txt
+    <ul>
+    <li>Added values for characters in the newly encoded Toto script.</li>
+    <li>Added values for several newly encoded combining marks in other Indic scripts.</li>
+    </ul>
+  </li>
+  <li>IndicSyllabicCategory.txt
+    <ul>
+    <li>Appropriate Indic_Syllabic_Category property values were assigned to characters
+      in the newly encoded Toto script.</li>
+    <li>Added values for several newly encoded characters in other Indic scripts.</li>
+    </ul>
+  </li>
+  <li>LineBreak.txt
+    <ul>
+    <li>Newly encoded characters were assigned appropriate Line_Break property values.</li>
+    <li>TBD</li>
+    <li>Of the NN newly encoded emoji symbols, two were assigned the Line_Break property
+      value E_Base. Those occur as bases in valid emoji modifier sequences, and thus
+      have the Emoji_Modifier_Base property. (See [<a href="../tr41/tr41-26.html#UTS51">UTS51</a>].)
+      That Line_Break value represents a change from the default value Line_Break=Ideographic for
+      all unassigned code points in the range U+1F000..U+1FAFF. The other NN new emoji
+      were assigned the Line_Break property value Ideographic, retaining the default
+      value for that code point range.</li>
+    </ul>
+  </li>
+  <li>NamedSequences.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>NamedSequencesProv.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>NamesList.html
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>NamesList.txt
+    <ul>
+    <li>Content was updated throughout with new characters, as well as annotations, 
+      cross references, subheadings, and remarks.</li>
+    </ul>
+  </li>
+  <li>PropertyAliases.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>PropertyValueAliases.txt
+    <ul>
+    <li>The 140 value, with the alias V140, was added to the catalog property Age.</li>
+    <li>Script and Block property values were listed for the one new script and
+      NN new blocks introduced.</li>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>PropList.txt
+    <ul>
+    <li>The newly encoded combining marks were assigned either the contributory
+      property Other_Alphabetic or the binary property Diacritic, as appropriate.</li>
+    <li>Several newly encoded punctuation marks were assigned the binary property
+      Terminal_Punctuation and/or Sentence_Terminal.</li>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Scripts.txt
+    <ul>
+    <li>Script-specific characters were assigned appropriate Script property values,
+      including one new value for the newly encoded script: Toto.</li>
+    <li>Symbols, such as legacy computing symbols as well as emoji, were assigned
+      the Script property value Common.</li>
+    <li>Punctuation marks, including XXX, were also
+      assigned the Script property value Common.</li>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>ScriptExtensions.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>TangutSources.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>UnicodeData.txt
+    <ul>
+    <li>Entries were added for the NNN new characters, including letters, combining marks,
+      numerals, symbols, and punctuation marks. The repertoire of new
+      letters includes several case pairs.</li>
+    <li>Among the newly encoded nonspacing combining marks, there are NN which have nonzero Canonical_Combining_Class values.</li>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>VerticalOrientation.txt
+    <ul>
+    <li>TBD</li>
+    <li>Other newly encoded characters were assigned Vertical_Orientation property
+      values that did not differ from the prior defaults for their code points.</li>
+    </ul>
+  </li>
+  </ul>
+
+<h4>Unihan Database (Unihan.zip)</h4>
+
+  <ul>
+  <li>Unihan_DictionaryIndices.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Unihan_DictionaryLikeData.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Unihan_IRGSources.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Unihan_OtherMappings.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Unihan_RadicalStrokecounts.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Unihan_Readings.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>Unihan_Variants.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  </ul>
+
+<h4>Data for UAX #45</h4>
+
+  <ul>
+  <li>USourceData.txt
+    <ul>
+    <li>A total of NN new entries were added for Version 14.0, with the identifiers
+      UTC-03NNN through UTC-03NNN.</li>
+    <li>For many entries which have already been encoded, the status was changed and
+      the Unicode code point was added.</li>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>USourceGlyphs.pdf
+    <ul>
+    <li>Glyphs were added for the NN new UTC-Source ideographs introduced in USourceData.txt.</li>
+    </ul>
+  </li>
+  <li>USourceRSChart.pdf
+    <ul>
+    <li>Added new entries for the radical-stroke index.</li>
+    </ul>
+  </li>
+  </ul>
+
+<h4>Conformance Test Data</h4>
+
+  <ul>
+  <li>NormalizationTest.txt
+    <ul>
+    <li>TBD</li>
+    <li>Additional test cases were added, exercising new characters with other
+      non-zero Canonical_Combining_Class values.</li>
+    </ul>
+  </li>
+  </ul>
+
+<h4>Auxiliary Data for UAX #14 and UAX #29</h4>
+
+  <ul>
+  <li>GraphemeBreakProperty.txt
+    <ul>
+    <li>Entries were added for the newly encoded characters that were assigned the
+      Grapheme_Cluster_Break property values Extend, Prepend, and SpacingMark,
+      according to the derivation expressions of those property values.</li>
+    </ul>
+  </li>
+  <li>LineBreakTest.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>SentenceBreakProperty.txt
+    <ul>
+    <li>Entries were added for the newly encoded characters that were assigned the
+      Sentence_Break property values Extend, Lower, Upper, Numeric, OLetter, and
+      STerm, according to the derivation expressions of those property values.</li>
+    </ul>
+  </li>
+  <li>WordBreakProperty.txt
+    <ul>
+    <li>Entries were added for the newly encoded characters that were assigned the
+      Word_Break property values Extend, ALetter, MidLetter, and Numeric,
+      according to the derivation expressions of those property values.</li>
+    </ul>
+  </li>
+  </ul>
+
+<h4>Documentation for Auxiliary Data</h4>
+
+  <ul>
+  <li>LineBreakTest.html
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  </ul>
+
+<h4>Emoji Data</h4>
+
+  <ul>
+  <li>emoji-data.txt
+    <ul>
+    <li>The NN new emoji characters were given appropriate emoji property
+      values: Emoji=Yes, Emoji_Presentation=Yes, and Extended_Pictographic=Yes.</li>
+    <li>TBD</li>
+    </ul>
+  </li>
+  <li>emoji-variation-sequences.txt
+    <ul>
+    <li>TBD</li>
+    </ul>
+  </li>
+  </ul>
+</div>
+<hr>
+
 <h3><a name="Unicode_13.0.0" href="http://www.unicode.org/versions/components-13.0.0.html">Unicode 13.0.0</a></h3>
 
 <p><b>Changes in specific files:</b></p>
@@ -6108,6 +6393,7 @@ documented listing of the rules.</p>
 
 <hr>
 
+<div class="removed">
 <h3><a name="Unicode_12.0.0" href="http://www.unicode.org/versions/components-12.0.0.html">Unicode 12.0.0</a></h3>
 
 <p><b>Changes in specific files:</b></p>
@@ -6512,7 +6798,7 @@ documented listing of the rules.</p>
     </ul>
   </li>
   </ul>
-
+</div>
 <hr>
 
 <h2 class="nonumber"><a name="Acknowledgments" href="#Acknowledgments">Acknowledgments</a></h2>
@@ -6535,6 +6821,13 @@ documented listing of the rules.</p>
   
   <p>The following summarizes modifications from previous revisions of this 
 	annex.</p>
+
+  <h3 class="changed">Revision 27 [KW, LI]</h3>
+  <ul class="changed">
+    <li><b>Proposed Update</b> for Unicode 14.0.0.</li>
+    <li>Corrected erroneous statement about which General_Category values
+      can be associated with ccc≠0, in Section <a href="#Property_Invariants">5.10.1</a>.</li>
+  </ul>
 
   <h3>Revision 26 [KW, LI]</h3>
   <ul>
