Note about examples

--- a/tr18/tr18.html
+++ b/tr18/tr18.html
@@ -465,6 +465,10 @@ ESCAPE           := &quot;\&quot;</pre>
 			  simply choose a delimiter that is not in the particular regular
 			  expression.
 	  </p>
+	  <p class='changed'>Note that all examples of properties being equivalent to certain literal character classes are illustrative. 
+	  They were generated at a point in time, and are not updated with each release.
+	   Thus when an example contains “\p{sc=Hira} = [ぁ-ゖゝ-ゟ𛀁🈀]”, 
+	   that does not imply the identity expression would be true for the current version of Unicode.
 		<h3>
 			0.2 <a name="Conformance" href="#Conformance">Conformance</a>
 		</h3>
